# carbon_pulse

./: .gitignore  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  env.example  profiles.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
carbon_pulse/: __init__.py  config.py  logger.py  models.py
carbon_pulse/api/: __init__.py  main.py
carbon_pulse/dashboard/: __init__.py  main.py
dags/: carbon_intensity_ingestion.py
great_expectations/: great_expectations.yml
great_expectations/expectations/carbon_intensity/: expect_carbon_intensity_data_quality.json
models/: sources.yml
models/core/: carbon_intensity_summary.sql
models/marts/: dim_zones.sql  fact_carbon_intensity.sql
models/staging/: stg_carbon_intensity.sql  stg_zones.sql
scripts/: setup.py  test_electricity_maps.py  test_electricity_maps_minimal.py  test_electricity_maps_with_env.py
tests/: __init__.py  test_database.py  test_electricity_maps.py  test_logger.py  test_models.py
